[gd_scene load_steps=2 format=2]

[ext_resource path="res://app/gears/AbstractGear.gd" type="Script" id=1]

[node name="AbstractGear" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer_Battery" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[node name="SFX_Enabled" type="AudioStreamPlayer" parent="."]

[node name="SFX_Disabled" type="AudioStreamPlayer" parent="."]
[connection signal="timeout" from="Timer_Battery" to="." method="onBatteryDischarged"]
